--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,25 +3,82 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --dark-blue: #221B66;
+  --sample-blue: #4032C5;
+  --gray-blue: #57518A;
+  --action-blue: #392CA7;
+  --bg: #FFF;
+  --sub-bg: #F2F2F2;
+  --text: #78787A;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --dark-blue: #3100a5;       /* Cor dark-blue no modo escuro */
+    --sample-blue: #00F;     /* Cor sample-blue no modo escuro */
+    --gray-blue: #89b6d4;      /* Cor gray-blue no modo escuro */
+    --action-blue: #399fda;       /* Cor action-blue no modo escuro */
+    --bg: #080808;           /* Cor bg no modo escuro */
+    --sub-bg: #202020;       /* Cor sub-bg no modo escuro */
+    --text: #D9D9D9;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--bg);
 }
+
+/* Estilos para tamanhos de cabeçalhos */
+h1 {
+  font-size: 2.5rem; /* Tamanho do cabeçalho h1 (2.5 rem * 16 = 40 pixels) */
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 2rem; /* Tamanho do cabeçalho h2 (2 rem * 16 = 32 pixels) */
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 1.75rem; /* Tamanho do cabeçalho h3 (1.75 rem * 16 = 28 pixels) */
+  font-weight: bold;
+}
+
+h4 {
+  font-size: 1.5rem; /* Tamanho do cabeçalho h4 (1.5 rem * 16 = 24 pixels) */
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 1.25rem; /* Tamanho do cabeçalho h5 (1.25 rem * 16 = 20 pixels) */
+  font-weight: bold;
+}
+
+h6 {
+  font-size: 1rem; /* Tamanho do cabeçalho h6 (1 rem * 16 = 16 pixels) */
+  font-weight: bold;
+}
+
+/* Formatações simples */
+p {
+  font-size: 1rem; /* Tamanho do parágrafo (1 rem * 16 = 16 pixels) */
+  line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+  color: #007BFF; /* Cor para links */
+  font-size: 1rem; /* Tamanho do link (1 rem * 16 = 16 pixels) */
+}
+
+ul, ol {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 1rem; /* Margem inferior do item de lista (1 rem * 16 = 16 pixels) */
+}
+
+/* Outras formatações */
+/* Adicione aqui outras formatações de elementos HTML, como botões, caixas de alerta, etc. */
