--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,3 +88,4 @@ li {
      padding-left: 18px;
      /* margin: 5px; */
   }
+@keyframes slide-bottom{0%{transform:translateY(-100px)}100%{transform:translateY(0px)}}
